--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,6 +15,9 @@ p {
     line-height: 28px;
     margin-bottom: 25px;
 }
+.btn.btn-warning {
+    background-color: black
+}
 #logo{
    
     max-width: 100%;
