--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -2122,8 +2122,7 @@ fieldset[disabled] .btn-primary.active {
 
 .btn-warning {
   color: #ffffff;
-  background-color: #f0ad4e;
-  border-color: #eea236;
+  background-color: grey;
 }
 
 .btn-warning:hover,
